<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|center_horizontal|fill|fill_horizontal"
    android:orientation="vertical" >
        
     <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.85" >

         <SurfaceView
             android:id="@+id/surfaceView1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     
    </FrameLayout>

     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
         android:gravity="center|clip_horizontal"
         android:orientation="horizontal" >

         <Button
             android:id="@+id/buttonLeft"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/left" />

         <Button
             android:id="@+id/buttonUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/up" />

         <Button
             android:id="@+id/buttonDown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/down" />

         <Button
             android:id="@+id/buttonRight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/right" />
     </LinearLayout>

    <Button
        android:id="@+id/buttonFire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fire" />

</LinearLayout>